2002-02-15  Jody Goldberg <jody@gnome.org>

	* src/sheet-object-image.{ch} : new.

	* src/sheet-object.c (sheet_object_new_view) : use a weak_ref.

	* src/sheet-control-gui.c (scg_object_register) : more safety
	  and use a weak_ref.

	* src/sheet-object-graphic.c : More GObject-ification.

2002-02-15  Morten Welinder  <terra@diku.dk>

	* src/regression.c (LUPDecomp): Use fabs, not abs.
	* src/validation.c (validation_eval): Ditto.

2002-02-15  Morten Welinder  <terra@diku.dk>

	* src/regression.c (general_linear_regression): Cleanup using
	range functions.

2002-02-15  Jody Goldberg <jody@gnome.org>

	* src/widgets/gnumeric-combo-text.c (gnm_combo_text_destroy) : more
	  g_signal-ification.  g_signal_handlers_disconnect_by_func just hides
	  the problem.  The real issue is that we are disconnecting twice.

	* src/workbook.c (workbook_set_saveinfo) : use a weak_ref.

2002-02-15  Jody Goldberg <jody@gnome.org>

	* src/item-cursor.c (item_cursor_tip_setlabel) : enable now that the
	  canvas bug is fixed.

	* src/sheet-control-gui.c (cb_hscrollbar_adjust_bounds) : new.
	(cb_vscrollbar_adjust_bounds) : new.

	* src/gui-util.c (gtk_button_stock_alignment_set) : new.
	(gnumeric_init_help_button) : new.

	* src/gnumeric-canvas.h : Move declaration of
	  GnumericCanvasSlideHandler here.

	* src/gnumeric-canvas.c (gnm_canvas_guru_key) : forward to the entry,
	  not the GnumericExprEntry wrapper.
	(gnm_canvas_key_mode_sheet) : ditto.

	* src/formats.c (cell_format_classify) : handle general.

	* src/file-priv.h : Inherit from GObject.

	* src/complete-sheet.c (complete_sheet_finalize) : call class_peek
	  here to avoid potential reference problems.

	* src/commands.c (cmd_set_text) : doh!  fix multi-line text.
	(cmd_autoformat) : const.

	* src/cell.c (cell_relocate) : const.
	* src/clipboard.c (paste_cell_with_operation) : const.
	(paste_cell) : ditto.

	* src/application.c (application_init) : add jimmac's expr-entry icon.
