@@ -1,3 +1,9 @@
+2002-02-16  Jody Goldberg <jody@gnome.org>
+
+	* src/sheet-object-image.c (soi_get_pixbuf) : move things here.
+	(sheet_object_image_new_view) : and use it here.
+	(sheet_object_image_print) : and here.
+
 2002-02-15  Jody Goldberg <jody@gnome.org>
 
 	* src/sheet-object-image.{ch} : new.
